# BladeWalker

./: .gitignore  DETAILS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  train.py  train_sac.py  walker_test_PPO.py
PageHTML/: architecture.html  dashboard.html  index.html  style.css
envs/: __init__.py  chicken.py  dog.py  physics_engine.py  play.py  renderer.py  walker-creation.py  walker_env.py
models/: README.md  __init__.py  common_backbone.py  models_README.md  policy_network.py  sac_50000_actor.weights.h5  sac_50000_critic1.weights.h5  sac_50000_critic2.weights.h5  sac_50000_log_alpha.npy  sac_networks.py
robotic_arm/: mouse.py  robot_arm_env.py  robot_arm_train.py  testPPO.py  testSAC.py
robotic_arm/evolution/: README.md
robotic_arm/pointeur/: README.md  pointeur_env.py  pointeur_mouse.py  pointeur_test_PPO.py
robotic_arm/pointeur_obstacle/: pointeur_env.py  pointeur_mouse.py  pointeur_test_PPO.py  pointeur_test_SAC.py  pointeur_train.py  wrapper.py
robotic_arm/transporteur/: README.md  transporteur_env.py  transporteur_test_PPO.py  transporteur_test_SAC.py  transporteur_train.py
scripts/: export_video.py  play.py  smoke_test.py  train.py
src/bladewalker/: __init__.py  config.py  envs.py
src/bladewalker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
training/: __init__.py  ppo.py  replay_buffer.py  rollout_buffer.py  sac_tf.py  train.py  training_README.md
utils/: __init__.py
web/: index.html  level-1.html  map.html  scripts.js  style.css
web/old/: level.html  particles.js  script.js  (+2 more)
