[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bladewalker"
version = "0.1.0"
description = "Prototype RL BladeWalker with Gymnasium Box2D and Stable-Baselines3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "stable-baselines3>=2.3.0,<3",
  "gymnasium[box2d]>=0.29.1,<1",
  "torch>=2.1.0",
  "pygame>=2.5.0",
  "moviepy>=1.0.3",
  "numpy>=1.24",
  "tensorboard>=2.16",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
